updated index.html file and added images

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<p>TOM SHUMAN</p>
+<!DOCTYPE html>
+<html>
+    <head> 
+        <title> Tom's Vacation </title> 
+    </head>
+
+    <main>
+        <body>
+            <header> Tom's Cruise </header>
+
+            <article>
+
+                <img src="C:\Users\Tom\lc101\html-me-something\images\drink.jpg">
+                <img src="C:\Users\Tom\lc101\html-me-something\images\sunset.jpg">
+
+
+                    <p> I recently went on a cruise to Mexico </p>
+                
+                <img src="C:\Users\Tom\lc101\html-me-something\images\ship.jpg">
+            
+            </article>
+
+
+            <footer> I can't wait to go again! </footer>
+            <footer> &copy; 2015 RapidTables.com  </footer>
+
+
+    </body>
