index file and new CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head> 
         <title> Tom's Vacation </title> 
     </head>
+        <link rel="stylesheet" href="/html-me-something/styles.css">
 
     <main>
         <body>
